# django-reclass

./: .coveragerc  MANIFEST.in  README.rst  setup.cfg
django_reclass/: __init__.py  admin.py  api.py  models.py  recievers.py  reclass.py  settings.py  signals.py  urls.py
django_reclass/api/: __init__.py  master.py  serializers.py  urls.py  views.py
django_reclass/backends/salt/: __init__.py  backend.py
django_reclass/graphql/: schema.py  urls.py
django_reclass/management/commands/: import_reclass.py
django_reclass/migrations/: 0001_initial.py  0002_reclass.py
docs/source/: conf.py  index.rst
requirements/: default.txt  graphql.txt
tests/: local_settings.py
tests/testapp/tests/: test_commands.py
